--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ body{
 .row{
 	border-bottom: 1px solid black;
 	clear: both;
+	cursor: pointer;
 }
 .row > * {
 	border-right: 1px solid black;
@@ -63,9 +64,39 @@ function getDataFromServer(){
 	$.ajax( options );
 }
 
+function getOneUserDataFromServer(id){
+	const options = {
+		url: 'getdata.php',
+		data: {
+			user_id: id
+		},
+		dataType: 'json',
+		success: function(response){
+			if(response.success){
+
+				$("#dataOutput").empty().append(
+					response.data.map( student => renderStudentOnDom(student))
+				)				
+			} else {
+				$("#dataOutput").text('no data available')
+			}
+
+		},
+		error: function(){
+			console.log('things went wrong')
+		}
+	}
+	$.ajax( options );
+}
+
 function renderStudentOnDom(student){
 	var container = $("<div>",{
-		'class': 'row'
+		'class': 'row',
+		on: {
+			click: function(){
+				getOneUserDataFromServer( student.ID );
+			}
+		}
 	});
 	var name = $("<div>", {
 		'class': 'name',
